Fix backdrop blur by layering background behind
Applied z-index: -2 and position: fixed to the background div to move it
behind body and .body-container.
Grouped html and body CSS

--- a/style.css
+++ b/style.css
@@ -4,17 +4,33 @@
   box-sizing: border-box;
 }
 
-html {
-  font-size: 16px;
-}
-
+html,
 body {
   font-family: Roboto, system-ui, sans-serif;
+  height: 100%;
+  width: 100%;
+}
+
+.background {
+  position: fixed;
+  top: 0;
+  left: 0;
   height: 100%;
   width: 100%;
   /* Image owner - Marcela Artola */
   background-image: url('images/bg-image.jpg');
   background-size: cover;
-  background-repeat: none;
   background-position: center;
+  z-index: -2;
+}
+
+.body-container {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(10px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
